feat: update code

--- a/BookStore/src/main/resources/templates/user/forgot-password.html
+++ b/BookStore/src/main/resources/templates/user/forgot-password.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quên mật khẩu</title>
+    <link rel="stylesheet" th:href="@{/css/custom-styles.css}">
+    <th:block th:replace="~{layout::link-css}"></th:block>
 </head>
 <body>
-
+<th:block th:replace="~{layout::header}"></th:block>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center">Quên mật khẩu</h3>
+                    <form th:action="@{/forgot-password}" method="post">
+                        <fieldset>
+                            <div th:if="${message}" class="alert alert-success">
+                                <p th:text="${message}"></p>
+                            </div>
+                            <div th:if="${error}" class="alert alert-danger">
+                                <p th:text="${error}"></p>
+                            </div>
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Tên đăng nhập</label>
+                                <input type="text" required class="form-control" id="username" name="username">
+                            </div>
+                            <div class="d-grid gap-2 form-action">
+                                <button type="submit" class="btn btn-primary">Gửi yêu cầu đặt lại mật khẩu</button>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<th:block th:replace="~{layout::footer}"></th:block>
 </body>
 </html>
