--- a/BookStore/src/main/resources/templates/user/login.html
+++ b/BookStore/src/main/resources/templates/user/login.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập</title>
     <link rel="stylesheet" th:href="@{/css/custom-styles.css}">
-    <link rel="icon" type="image/png" th:href="@{/Media/logo-danh-lam-thang-canh.png}" sizes="32x32">
     <th:block th:replace="~{layout::link-css}"></th:block>
 </head>
 <body>
@@ -41,6 +40,7 @@
                                 <button type="submit" class="btn btn-primary">Đăng nhập</button>
                                 <a href="/register" class="text-primary text-center">Chưa có tài khoản? Đăng ký ngay</a>
                                 <a href="/forgot-password" class="text-primary text-center">Quên mật khẩu?</a>
+                                <a th:href="@{/oauth2/authorization/google}" class="btn btn-danger">Đăng nhập bằng Google</a>
                             </div>
                         </fieldset>
                     </form>
