--- a/BookStore/src/main/resources/templates/user/manage-roles.html
+++ b/BookStore/src/main/resources/templates/user/manage-roles.html
@@ -7,7 +7,6 @@
     <title>Quản lý phân quyền</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/custom-styles.css}">
-    <link rel="icon" type="image/png" th:href="@{/Media/logo-danh-lam-thang-canh.png}" sizes="32x32">
     <th:block th:replace="~{layout::link-css}"></th:block>
 </head>
 <body>
@@ -69,6 +68,9 @@
                     option.textContent = role.name;
                     roleSelect.appendChild(option);
                 });
+            },
+            error: function(error) {
+                console.error('Error fetching roles:', error);
             }
         });
     }
