--- a/BookStore/src/main/resources/templates/user/reset-password.html
+++ b/BookStore/src/main/resources/templates/user/reset-password.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Đặt lại mật khẩu</title>
+    <link rel="stylesheet" th:href="@{/css/custom-styles.css}">
+    <th:block th:replace="~{layout::link-css}"></th:block>
 </head>
 <body>
-$END$
+<th:block th:replace="~{layout::header}"></th:block>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center">Đặt lại mật khẩu</h3>
+                    <form th:action="@{/reset-password}" method="post">
+                        <fieldset>
+                            <input type="hidden" th:value="${param.token}" name="token">
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Mật khẩu mới</label>
+                                <input type="password" required class="form-control" id="password" name="password">
+                            </div>
+                            <div class="d-grid gap-2 form-action">
+                                <button type="submit" class="btn btn-primary">Đặt lại mật khẩu</button>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<th:block th:replace="~{layout::footer}"></th:block>
 </body>
 </html>
